--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-less-chokidar": "^0.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -11,10 +12,17 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm run build-css && run-p -ncr watch-css start-js",
+    "start-js": "react-scripts start",
+
+    "build": "run-s -n build-css build-js",
+    "build-js": "react-scripts build",
+
+    "test": "run-s -n build-css test-js",
+    "test-js": "react-scripts test --env=jsdom",
+
+    "build-css": "node-less-chokidar src",
+    "watch-css": "node-less-chokidar src --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
