--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fetch": "^1.1.0",
     "node-less-chokidar": "^0.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -14,13 +15,10 @@
   "scripts": {
     "start": "npm run build-css && run-p -ncr watch-css start-js",
     "start-js": "react-scripts start",
-
     "build": "run-s -n build-css build-js",
     "build-js": "react-scripts build",
-
     "test": "run-s -n build-css test-js",
     "test-js": "react-scripts test --env=jsdom",
-
     "build-css": "node-less-chokidar src",
     "watch-css": "node-less-chokidar src --watch"
   },
